# TrackSegNet

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analysis.py  compute_features.py  docker-compose.yaml  generate_lstm_model.py  parms.csv  parms_toy_example.csv  plot.py  pyproject.toml  requirements.txt  track.py  tracksegnet-main.py  tracksegnet.py
.github/workflows/: .draft-pdf.yml  .generate-readthedocs.yml  .run-code.yml  .run-pylint.yml  pr-readthedocs-link.yml
data/toy_example/Cell_10/: max_projection.tif
data/toy_example/Cell_14/: max_projection.tif  tracks.simple.mdf
data/toy_example/Cell_6/: max_projection.tif  tracks.simple.mdf
docs/: conf.py
docs/source/: analysis-plots.md  analysis.rst  compute_features.rst  conf.py  data-preparation.md  experimental_tracks.rst  generate_lstm_model.rst  index.rst  installation.md  purposes.md  run-instruction.md  simulate_tracks.rst
paper/: paper.bib  paper.md
readthedocs-preview/: action.yaml
readthedocs-preview/scripts/: edit-description.js
src/: analysis.py  compute_features.py  experimental_tracks.py  generate_lstm_model.py  simulate_tracks.py  track.py  utils.py
src/tracksegnet/: experimental_tracks.py  simulate_tracks.py  utils.py
tracksegnet/: compute_features.py
tracksegnet-env/: pyvenv.cfg
