[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "TrackSegNet"
version = "1.2.1"
dynamic = ["dependencies"]
authors = [
  { name="Hélène Kabbech", email="helene.kabbech@gmail.com" },
]
description = "Segmentation of trajectories into diffusive states using supervised LSTM network"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hkabbech/TrackSegNet"
Issues = "https://github.com/hkabbech/TrackSegNet/issues"

[tool.hatch.build.targets.wheel]
packages = ["tracksegnet/analysis.py", "tracksegnet/compute_features.py", "tracksegnet/experimental_tracks.py", "tracksegnet/generate_lstm_model.py", "tracksegnet/simulate_tracks.py", "tracksegnet/utils.py"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
